@@ -26,6 +26,10 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #1621, #1894:  Added BBB alias for 'whrandom'
+        in AccessControl/DTML.py and RestrictedPython/Utilities.py.  The
+        alias will be removed in Zope 2.10.
+
       - Collector #1954: DocumentTemplate.DT_String:  remove non-XHTML
         wart from error message.
 
